--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS for beginers</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>JS for beginers</h1>
+    <h1 class="text-center text-white bg-secondary">JS for beginers</h1>
     <!-- 
         js ->conforms ECMAScript specification
         multi-paradigm
