Building HTTP Server in NodeJS
 ( Youtube channel: Piyush Garg)

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
      -->
 
     <!-- we want to load js file after html&css file loads.So always include JS script at the end -->
-    <script src="01_console_variable.js"></script>
-    <script src="02_string_array.js"></script>
-    <script src="03_object_Literal_JSON_loop.js"></script>
-    <script src="04_Map_Filter_Foreach.js"></script>
-    <script src="05_function_simpler.js"></script>
+    <script type="application/javascript" src="01_console_variable.js" "></script>
+    <script type="application/javascript" src="02_string_array.js" "></script>
+    <script type="application/javascript" src="03_object_Literal_JSON_loop.js" "></script>
+    <script type="application/javascript" src="04_Map_Filter_Foreach.js" "></script>
+    <script type="application/javascript" src="05_function_simpler.js" "></script>
 </body>
 </html>
