noteapp code improved (async) jwt ,zod, cookie, joi, bcrypt code added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS for beginers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        #card #popup {
+            display: none;
+        }
+        #card #popup a{
+            color: white;
+        }
+        #card:hover #popup{
+            display: block;
+            position: absolute;
+            top: 60px;
+            z-index: 1;/*if overlap another container it will be on top on that*/
+            width: 90%;
+        }
+        .container:hover .extraspace{
+            height: 50vh;
+        }
+
+        /* all col-md-6 has a div. make div inside different col-md-6 same height */
+        .col-md-6 {
+            display: flex;
+            flex-direction: column;
+        } 
+        .inner-div {
+            flex: 1;
+            /* height: 100%; */
+            /* border: 1px solid #ccc; /* Optional: Add a border for better visibility */
+        }
+    </style>
 </head>
 <body>
     <h1 class="text-center text-white bg-secondary">JS for beginers</h1>
@@ -14,11 +43,83 @@
         run at -> client browser & server
      -->
 
+     <div class="container">
+        <div class="row">
+
+            <div class="col-md-6">
+                <div class="card p-3 my-2 shadow  inner-div" id="card">
+                    <div class="h2 px-3">Tanvir Anjom Siddique</div>
+
+                    <div class="text-white bg-secondary card p-3 px-5 my-3" id="popup">                        
+                        <img src="alvi.jpeg" alt="loading ..." height="200" class="d-block mx-auto rounded-circle"><br>
+                        <div class="h5">Name: Tanvir Anjom Siddique</div>
+                        Dept: CSE<br>
+                        University: RUET<br>
+                        Email: tanvir.anjom.siddique@gmail.com <br>
+                        LinkedIn: <a href="https://www.linkedin.com/in/tanvir-anjom-siddique-50028a205/" class="link">Tanvir Anjom Siddique</a>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="card p-3 my-2 shadow  inner-div" id="card">
+                    <div class="h2 px-3 inner-div">Anik</div>
+
+                    <div class="text-white bg-secondary card p-3 px-5 my-3" id="popup">
+                        <img src="alvi.jpeg" alt="loading ..." height="200" class="d-block mx-auto rounded-circle"><br>
+                        <div class="h5">Name: Anik</div>
+                        Dept: EEE<br>
+                        University: RUET<br>
+                        Email: anik@gmail.com <br>
+                        LinkedIn: <a href="https://www.linkedin.com/in/tanvir-anjom-siddique-50028a205/" class="link">Anik</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+     </div>
+
+     <div class="container">
+        <div class="row" id="userinfo">
+
+        </div>
+        <div class="extraspace"></div>
+     </div>
+     </div>
+     
     <!-- we want to load js file after html&css file loads.So always include JS script at the end -->
     <script type="application/javascript" src="01_console_variable.js" "></script>
     <script type="application/javascript" src="02_string_array.js" "></script>
     <script type="application/javascript" src="03_object_Literal_JSON_loop.js" "></script>
     <script type="application/javascript" src="04_Map_Filter_Foreach.js" "></script>
     <script type="application/javascript" src="05_function_simpler.js" "></script>
+    <script>
+        var it = 1;
+        let data =``;
+        while(it<40){
+            data = data+ `
+            <div class="col-md-6">
+                    <div class="card p-3 my-2 shadow inner-div" id="card">
+                        <div class="h2 px-3">Person ${it}</div>
+
+                        <div class="text-white bg-secondary card p-3 px-5 my-3" id="popup">                                                        
+                            <img src="alvi.jpeg" alt="loading ..." height="200" class="d-block mx-auto rounded-circle"><br>
+                            <div class="h5">Name: Person ${it}</div>
+                            Dept: CSE<br>
+                            University: RUET<br>
+                            Email: person${it}@gmail.com <br>
+                            LinkedIn: <a href="https://www.linkedin.com/in/tanvir-anjom-siddique-50028a205/" class="link">Person ${it}</a>
+                        </div>
+
+                    </div>
+                </div>
+            `;
+            it=it+1;
+        }
+        const users = document.querySelector('#userinfo')
+        users.innerHTML= data;
+        
+    </script>
 </body>
 </html>
