AsynchronouJS details, XMLHtttpRequest, callback hell, chained promises, aync await, fetch api etc.

--- a/AsynchronousJS/index.html
+++ b/AsynchronousJS/index.html
@@ -11,6 +11,11 @@
 
     <ol id="ol"></ol>
     <!-- <script src="callback.js"></script> -->
-    <script src="promise_async_wait_fetch.js"></script>
+    <!-- <script src="promise_async_wait_fetch.js"></script> -->
+    <!-- <script src="02_HTTTP_request.js"></script> -->
+    <!-- <script src="03_parse_JSON_data.js"></script> -->
+    <!-- <script src="04_promises.js"></script> -->
+    <script src="05_fetch_api.js"></script>
+
 </body>
 </html>
